gsettings_SCHEMAS = \
	org.mate.accessibility-keyboard.gschema.xml \
	org.mate.accessibility-startup.gschema.xml \
	org.mate.applications-at-mobility.gschema.xml \
	org.mate.applications-at-visual.gschema.xml \
	org.mate.applications-browser.gschema.xml \
	org.mate.applications-calculator.gschema.xml \
	org.mate.applications-colors.gschema.xml \
	org.mate.applications-messenger.gschema.xml \
	org.mate.applications-office.gschema.xml \
	org.mate.applications-terminal.gschema.xml \
	org.mate.background.gschema.xml \
	org.mate.debug.gschema.xml \
	org.mate.file-views.gschema.xml \
	org.mate.interface.gschema.xml \
	org.mate.lockdown.gschema.xml \
	org.mate.sound.gschema.xml \
	org.mate.thumbnail-cache.gschema.xml \
	org.mate.thumbnailers.gschema.xml \
	org.mate.typing-break.gschema.xml

@GSETTINGS_RULES@

EXTRA_DIST = \
	$(gsettings_SCHEMAS) \
	meson.build

CLEANFILES = \
	*.gschema.valid
