@YELP_HELP_RULES@

HELP_ID = mate-user-guide
HELP_FILES = index.docbook	\
	legal.xml		\
	gosbasic.xml		\
	goscustdesk.xml		\
	goseditmainmenu.xml	\
	goscaja.xml		\
	gosoverview.xml		\
	gospanel.xml		\
	gosstartsession.xml	\
	gostools.xml		\
	gosfeedback.xml		\
	glossary.xml
HELP_LINGUAS = ar bg cs de el es eu fi fr gl hu id it ja ko oc pa pt pt_BR ru sv th uk zh_CN

-include $(top_srcdir)/git.mk
