@YELP_HELP_RULES@

HELP_ID = mate-user-guide
HELP_FILES = index.docbook	\
	legal.xml		\
	gosbasic.xml		\
	goscustdesk.xml		\
	goseditmainmenu.xml	\
	goscaja.xml		\
	gosoverview.xml		\
	gospanel.xml		\
	gosstartsession.xml	\
	gostools.xml		\
	gosfeedback.xml		\
	glossary.xml

HELP_MEDIA =					\
	figures/ask_pointer.png			\
	figures/busy_pointer.png 		\
	figures/caja_browser_mode.png		\
	figures/caja_button_bar.png		\
	figures/caja_computer_launcher.png	\
	figures/caja_emblem.png			\
	figures/caja_go_to_location.png		\
	figures/caja_link_emblem.png		\
	figures/caja_noread_emblem.png		\
	figures/caja_normal_size_button.png	\
	figures/caja_nowrite_emblem.png		\
	figures/caja_refine_search.png		\
	figures/caja_restore_saved_search.png	\
	figures/caja_sampleemblem1_icon.png	\
	figures/caja_sampleemblem2_icon.png	\
	figures/caja_sampleemblem3_icon.png	\
	figures/caja_sampleemblem_icon.png	\
	figures/caja_samplesymlink_icon.png	\
	figures/caja_search_bar.png		\
	figures/caja_search_results.png		\
	figures/caja_spatial_icon_view.png	\
	figures/caja_spatial_list_view.png	\
	figures/caja_spatial_mode.png		\
	figures/caja_spatial_view.png		\
	figures/caja_starthere_launcher.png	\
	figures/caja_trash_launcher.png		\
	figures/caja_zoom_in_button.png		\
	figures/caja_zoom_out_button.png	\
	figures/com_file_manager_menu.png	\
	figures/copy_pointer.png		\
	figures/force_quit.png			\
	figures/four_hide_button.png		\
	figures/hyperlink_pointer.png		\
	figures/ibeam_pointer.png		\
	figures/link_pointer.png		\
	figures/lockscreen_icon.png		\
	figures/logout_icon.png			\
	figures/mate_panel.png			\
	figures/menu_bar_applet.png		\
	figures/menu_panel.png			\
	figures/move_panel_object_pointer.png	\
	figures/move_pointer.png		\
	figures/movewindow_pointer.png		\
	figures/normal_pointer.png		\
	figures/not_available_pointer.png	\
	figures/notification_area_icon.png	\
	figures/open_drawer.png			\
	figures/openwindows_menu.png		\
	figures/panel_object_popup_menu.png	\
	figures/pluma_window.png		\
	figures/resize_pointer.png		\
	figures/run_button.png			\
	figures/sample_applet.png		\
	figures/screenshot_button.png

HELP_LINGUAS = ar bg cs de el es eu fi fr gl hu id it ja ko oc pa pt pt_BR ru sv th uk zh_CN

-include $(top_srcdir)/git.mk
